--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "build": "npm install & npx tsc",
+    "build": "npm install && npx tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
